--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ a:link, a:visited, a:hover, a:active {
     padding: 20px;
     background-color: var(--secondary-background);
     max-width: 800px;
+    width: 100%;
     border-radius: 8px;
     margin-left: auto;
     margin-right: auto;
@@ -41,7 +42,7 @@ a:link, a:visited, a:hover, a:active {
 .content {
     height: min-content;
     padding: 20px;
-    padding-bottom: calc(20px + var(--header-height));
+    width: 100%;
     transition: filter .5s ease-in-out;
 }
 
@@ -49,7 +50,7 @@ a:link, a:visited, a:hover, a:active {
     display: flex;
     justify-content: center;
     overflow-y: auto;
-    height: 100%;
+    height: calc(100% - var(--header-height));
 }
 
 .blur {
